IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
12/19/13: Rubberband, arrows for view-axis based rotation, and slider for
moving along view axis added to slicer; with band on, limits can be set and
File-Extract File can be used extract selected region with Rotatevol.

12/19/13: Fixed File-Extract File when subarea of volume or volumes of
different size are loaded or when the time lock is on.

12/19/13: Allowed X, Y, and Z limits out of range for Trimvol.

12/19/13: Fixed autofidseed and findsirtdiffs for Python 3.

12/13/13: Fixed 3dmod button resizing in Windows when change font size.

12/13/13: In eTomo - Fine Alignment, exposed tiltalign - weightWholeTracks.
(Bug# 1766)

12/13/13: Updated the eTomo manpage.  Improved the eTomo help statement.
(Bug# 1764)

12/12/13: Enabled modeling in XZ and YZ planes of XYZ window.  New
closed/planar contours are started automatically on a new slice in all three
planes.  Surface numbers are assigned automatically so that such contours
drawn in XZ or YZ planes can be meshed.  Made arrows and PageUp/PageDown work
relative the plane where the mouse is located and added keypad keys to
move the current model point.

12/12/13: Made scroll wheel change point size in XYZ and Slicer windows.

12/12/13: Made XYZ window report distance from current point to mouse with q
hot key, fixed use of current model point for q report from Zap window.

12/12/13: Fixed position tracking in pixel view window from XYZ window.

12/6/13: Added option to Imodinfo to get contour lengths broken out by
fine-grained color, and made -o option provide object list for all outputs.

12/3/13: In eTomo - PEET, excluding the quoted values functionality.
(Bug# 1631)

11/30/13: Changes to Tiltalign to deal with patch tracking data: it can select
a subset of patches for the global alignment to avoid solving for too many
variables; it can do robust fitting with weights assigned either to individual
points or to whole contours.