@@ -25,7 +25,8 @@ Ctrl held down
 <TR><TD>Keypad-Enter<TD>Toggle continuous rotation on and off (Keypad-5 may
 also do this)
 <TR><TD><B>Substitute Keypad</B><TD>The key cluster centered on U can also be used
-    for rotating the model or clipping plane
+    for rotating the model or clipping plane (the Rotation tool provides
+    another substitute to the keypad)
 <TR><TD>7/j<TD>Rotate around X viewing axis
 <TR><TD>y/i<TD>Rotate around Y viewing axis: but Ctrl-U, not Ctrl-Y,
     rotates clipping plane
@@ -52,6 +53,7 @@ modvnnnn.xxx
 <TR><TD>m<TD>Open movie control window
 <TR><TD>O<TD>Open Object Edit window
 <TR><TD>C<TD>Open controls window
+<TR><TD>R<TD>Open Rotation tool with buttons for rotating model
 <TR><TD>B<TD>Open background color window
 <TR><TD>L<TD>Open Object List window
 <TR><TD>M<TD>Open model selection window
@@ -61,7 +63,7 @@ modvnnnn.xxx
 <TR><TD>z<TD>Toggle display of Z image planes (only when run from 3dmod)
 <TR><TD>d<TD>Toggle double buffering
 <TR><TD>Ctrl+Shift+V<TD>Toggle use of vertex buffer objects
-<TR><TD>R<TD>Toggle low resolution drawing of mesh and spheres
+<TR><TD>Ctrl+R<TD>Toggle low resolution drawing of mesh and spheres
 <TR><TD>p<TD>Toggle display of current point (only when run from 3dmod)
 <TR><TD>g/G<TD>Increase/Decrease the quality of sphere drawing
 <TR><TD>[/]<TD>Adjust parallax for stereo viewing
